--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do list</title>
 </head>
+
 <body>
 
-    <h1>It's <%= kindOfDay %>  </h1>
-    
+    <% if (kindOfDay === "Saturday" || kindOfDay === "Sunday") { %>
+    <h1 style="color: rgb(190, 27, 27);"><%= kindOfDay %> ToDo list </h1>
+    <%   } else {  %>
+    <h1 style="color: rgb(44, 44, 201);"><%= kindOfDay %> ToDo List </h1>
+    <%  }  %>
+
+
 </body>
+
 </html>
