some css and more on ejs

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,30 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
+<%- include("header") -%> 
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To Do list</title>
-</head>
+    <div class="box" id="heading">
+        <h1> <%= listTitle %> </h1>
+    </div>
 
-<body>
+    <div class="box">
 
-    <h1> <%= kindOfDay %> </h1>
-
-    <ul>
-        
         <%  for (var i =0; i< toDoList.length; i++){  %>
-            <li><%= toDoList[i] %> </li>
+        <div class="item">
+            <input type="checkbox">
+            <p><%= toDoList[i] %> </p>
+        </div>
+
         <%   } %>
-    </ul>
-
-
-    <form action="/" method="post">
-        <input required="true" type="text" name="newItem" id="names">
-        <button type="submit" name="button">Submit</button>
+        
+        <form class="item" action="/" method="post">
+        <input required="true" type="text" name="newItem" id="names" placeholder="New Item" autocomplete="off" >
+        <button type="submit" name="list" value=<%= listTitle %>  >+</button>
     </form>
+    </div>
+<%- include("footer") -%> 
 
-</body>
 
-</html>
+
+    
+
